Arregla CSS credits

--- a/public/index.html
+++ b/public/index.html
@@ -275,10 +275,10 @@ alt='Es tu culpa'>
 
 
 	<section data-background='img/silos.jpg'>
-	  <h1 class='bkg'>Asignaturas como silos</h1>
+	  <h2 class='bkg'>Asignaturas como silos</h2>
 	  <h1 class='fragment bkg'>⇒</h1>
-	  <h1 class='fragment bkg'>Solapamiento de objetivos y
-	  contenidos</h1>
+	  <h2 class='fragment bkg'>Solapamiento de objetivos y
+	  contenidos</h2>
 
 	  <aside class='notes'>También poca integración entre
 	asignaturas. No hay trabajos que se sigan de una a la otra, no
@@ -308,7 +308,7 @@ alt='Es tu culpa'>
 
 	</section>
 
-	<section><h1>Poca transversalidad</h1></section>
+	<section data-background='https://farm6.staticflickr.com/5349/7080530893_ccb10741ce_h_d.jpg' alt='Cruce Shibuya'><h1>Poca transversalidad</h1></section>
 	<section><h1>Poca adaptabilidad</h1></section>
 
 	<section data-background=''>
@@ -373,49 +373,50 @@ alt='Es tu culpa'>
       <!-- créditos -->
       <section>
 	<h2>Créditos</h2>
-	<ul>
-	  <li class='credits'><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
+	<ul class='credits'>
+	  <li><a href='https://www.flickr.com/photos/chmoss/8397485048/'>Cara tapada de Clive Moss</a></li>
 	  
-	  <li class='credits'><a href='https://www.flickr.com/photos/mezzle/6080736879/'>Stallman de Martin Meredith</a></li>
-	  <li class='credits'><a
+	  <li><a href='https://www.flickr.com/photos/mezzle/6080736879/'>Stallman de Martin Meredith</a></li>
+	  <li><a
 	    href='https://www.flickr.com/photos/jake_miller/1507555279/'>Acusando
 	    de Jake Miller</a></li>
 	  
-	  <li class='credits'><a
+	  <li><a
 	    href='https://www.flickr.com/photos/s_evenseth/9518221385/'>Apuntando
 	    de Sven-Kåre Evenseth	  </a></li>
 
-	  <li class='credits'><a href='https://www.flickr.com/photos/jronaldlee/4478655355/'>Martillazo por James Lee</a></li>
+	  <li><a href='https://www.flickr.com/photos/jronaldlee/4478655355/'>Martillazo por James Lee</a></li>
 	  
-	  <li class='credits'><a href='https://www.flickr.com/photos/lorenjavier/5492944433/'>Dora por Loren Javier</a></li>
+	  <li><a href='https://www.flickr.com/photos/lorenjavier/5492944433/'>Dora por Loren Javier</a></li>
 
 	  <li><a href='https://www.flickr.com/photos/mateipetrutbogdan/2278772565/'>Pizarra de Matei Petrut-Bogdan</a></li>
 
-	  <li class='credits'><a
+	  <li><a
 	  href='https://www.flickr.com/photos/19706444@N00/2684866017/'>Ámbar
 	  de Orthoboric</a></li>
 
-	  <li class='credits'><a
+	  <li><a
 	    href='https://www.flickr.com/photos/udt007us/2679219873/'>Dormido
-	    de Christopher Roever			     </a></li>
+	      de Christopher Roever			     </a></li>
+	  <li><a href='https://www.flickr.com/photos/hanalita/7080530893/'>Cruce Shibuya por Hannah</a></li>
 	  
-	  <li class='credits'><a
+	  <li><a
 	    href='https://www.flickr.com/photos/nigelappleton/1464768432/'>Muro
 	      de Nigel Appleton</a></li>
 
-	  <li class='credits'><a
+	  <li><a
 	  href='https://www.flickr.com/photos/jeremy_vandel/147256012/'>Zapatos
 	  falsos por Jeremy Vandel</a></li>
 
 
-	  <li class='credits'><a href='https://www.flickr.com/photos/jurvetson/7515248418/'>Apple de Jurvetson</a></li>
+	  <li><a href='https://www.flickr.com/photos/jurvetson/7515248418/'>Apple de Jurvetson</a></li>
 
 
-	  <li class='credits'><a
+	  <li><a
 	    href='https://www.flickr.com/photos/multitudegolatra/4906280283/'>Matías
 	    Calderón señalando con el dedo</a></li>
 	  
-	  <li class='credits'><a href='https://www.flickr.com/photos/29158681@N00/4482536500/'>Caja de MSDOS por mrdorkesq </a></li>
+	  <li><a href='https://www.flickr.com/photos/29158681@N00/4482536500/'>Caja de MSDOS por mrdorkesq </a></li>
 
 
 	</ul>
