--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,10 @@
 	href='http://jenui01.herokuapp.com'>sl.ugr.es/lehmal</a></code></h1>
 	<h2><code>@jjmerelo</code>, <code>#jjenui</code></h2>
 
-	  <a href="https://twitter.com/intent/tweet?button_hashtag=jjenui" class="twitter-hashtag-button"  data-size="large" data-lang="es" data-show-count="false">Tweet #jjenui</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+	<p><a href="https://twitter.com/intent/tweet?button_hashtag=jjenui" class="twitter-hashtag-button"  data-size="large" data-lang="es" data-show-count="false">Tweet #jjenui</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 
+	<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+	  
 	<aside class='notes'>Agradecimientos diversos, pero por favor apunten tus tablets, portátiles, móviles y lo que haya a esa dirección</aside>
       </section>
 
@@ -231,8 +233,9 @@ alt='Es tu culpa'>
 	  alt='dormidos'><h1 class='bkg'>Abuso de la clase magistral</h1>
 	</section>
 
-	<section data-background=''>
+	<section data-background='https://farm4.staticflickr.com/3120/5863480546_d7b9cdfe9b_b_d.jpg' puente roto>
 	  <h1>Separación artificial entre teoría y práctica</h1>
+	  <aside class='notes'>Informática es una ingeniería, y como tal es más importante poner en práctica los conceptos que memorizarlos. Se trata de que, basándote en ellos, seas capaz de construir sistemas hechos principalmente con código. Para que un cocepto se aprenda, es esencial ponerlo en práctica de forma inmediata. Se aprende haciendo.</aside>
 	</section>
 
       </section>
@@ -427,7 +430,7 @@ alt='Es tu culpa'>
 	  
 	  <li><a href='https://www.flickr.com/photos/29158681@N00/4482536500/'>Caja de MSDOS por mrdorkesq </a></li>
 
-
+	  <li><a href='https://www.flickr.com/photos/stewartayrey/5863480546/'>Puente de Stewart Ayrey</a></li>
 	</ul>
 	
     </div>
