Añade página en blanco

--- a/public/index.html
+++ b/public/index.html
@@ -117,8 +117,10 @@
 	    asignatura o un curso</aside>
 	</section>
 
-	<section>
+	<section data-background='https://farm4.staticflickr.com/3597/3469696707_c188941c4c_b_d.jpg' alt='página en blanco'>
 	  <h1>Falta de iniciativa para diseñar un proyecto</h1>
+
+	  <aside class='notes'>Como en cualquier otra cosa, cuando un alumno llega al proyecto fin de carrera ha tenido poco margen para decidir el tema de un proyecto y tomar decisiones con respecto al mismo. Cuando se le dice de crear un proyecto, dicen "Voy a crear un proyecto con Mysql, Django y Bootstrap". ¿De qué? Pues una página web con MySQL, Django y Bootstrap. No saben identificar problemas, no saben trabajar de forma creativa para resolverlo. En el reto de la ETSIIT, en el que estoy de jurado, se les pidió que diseñaran un probador virtual. ¿Qué diseñó uno de los equipos? Correcto, una página web con MySQL, Django y Bootstrap</aside>
 	</section>
 	
 	<section id='asignatura_slide'>
@@ -431,6 +433,8 @@ alt='Es tu culpa'>
 	  <li><a href='https://www.flickr.com/photos/29158681@N00/4482536500/'>Caja de MSDOS por mrdorkesq </a></li>
 
 	  <li><a href='https://www.flickr.com/photos/stewartayrey/5863480546/'>Puente de Stewart Ayrey</a></li>
+
+	  <li><a href='https://www.flickr.com/photos/nirufe/3469696707/'>Página en blanco de Niklas Freidwall</a></li>
 	</ul>
 	
     </div>
