--- a/public/index.html
+++ b/public/index.html
@@ -314,10 +314,14 @@ alt='Es tu culpa'>
 	</section>
 
 	<section data-background='https://farm6.staticflickr.com/5349/7080530893_ccb10741ce_h_d.jpg' alt='Cruce Shibuya'><h1>¿Contenidos transversales?</h1></section>
-	<section><h1>Poca adaptabilidad</h1></section>
+	<section data-background='https://farm1.staticflickr.com/179/429657788_3c8e92c1b2_b_d.jpg' alt='ordenador de cartón'>
+	  <h1>Poca adaptabilidad</h1>
+	  <aside class='notes'>Aparte de la actitud, no probar diferentes posibilidades en una situación como leer el TFG, tampoco se adaptan los contenidos a nuevas circunstancias: Web, internet de las cosas, microservicios, servicios web, arquitecturas REST... Se sigue con arquitecturas clásicas, sin cambiar los ocntenidos hasta que no llevan 10 años en el mercado y en algunos casos se han convertido en obsoletos.</aside>
+	</section>
 
 	<section data-background=''>
 	  <h1>Énfasis en la sintaxis</h1>
+	  <h2 class='fragment'>Nada de código ajeno</h2>
 	</section>
 
 	<section>
@@ -435,6 +439,8 @@ alt='Es tu culpa'>
 	  <li><a href='https://www.flickr.com/photos/stewartayrey/5863480546/'>Puente de Stewart Ayrey</a></li>
 
 	  <li><a href='https://www.flickr.com/photos/nirufe/3469696707/'>Página en blanco de Niklas Freidwall</a></li>
+
+	  <li><a href='https://www.flickr.com/photos/vrogy/429657788/'>Ordenador de cartón de Michael Vroegop</a></li>
 	</ul>
 	
     </div>
