hablando de Dora

--- a/public/index.html
+++ b/public/index.html
@@ -258,7 +258,7 @@ alt='Es tu culpa'>
 	    que van a contratar a los ingenieros. Habrá que hacerles
 	    algún caso. La mochila dice <a
 	    href='http://dora.wikia.com/wiki/Backpack'>Anything you
-	    might need, I've got inside for you</a>.</aside>
+	    might need, I've got inside for you</a>. Lo que hace falta es que el alumno sea Dora, explorando siempre nuevas posibilidades y formas de hacer las cosas, porque es algo que también se aprende a hacer bien o mal. No que el grado le proporcione la mochila de Dora, llena con un montón de cosas que no va a necesitar. </aside>
 	</section>
 
 	<section
