--- a/public/index.html
+++ b/public/index.html
@@ -382,7 +382,7 @@ alt='Es tu culpa'>
 	  <p class='bkg'><a title="By Гришин Никита (Own work) [CC BY-SA 4.0 (http://creativecommons.org/licenses/by-sa/4.0)], via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File%3ABreaking_Bad_season_five_part_i_and_ii_dvd.png"><img width="256" alt="Breaking Bad season five part i and ii dvd" src="https://upload.wikimedia.org/wikipedia/commons/8/8b/Breaking_Bad_season_five_part_i_and_ii_dvd.png"/></a></p>
 	</section>
 
-	<section>
+	<section data-background='https://farm7.staticflickr.com/6114/6340984211_036ed98a98_o_d.jpg' alt='Me gusta'>
 	  <h1>Vamos a hacerlo mejor</h1>
 	</section>
 
@@ -441,6 +441,8 @@ alt='Es tu culpa'>
 	  <li><a href='https://www.flickr.com/photos/nirufe/3469696707/'>Página en blanco de Niklas Freidwall</a></li>
 
 	  <li><a href='https://www.flickr.com/photos/vrogy/429657788/'>Ordenador de cartón de Michael Vroegop</a></li>
+
+	  <li><a href='https://www.flickr.com/photos/krissen/6340984211/'>Pulgar de Kristian Niemi</a></li>
 	</ul>
 	
     </div>
