--- a/public/index.html
+++ b/public/index.html
@@ -319,7 +319,9 @@ alt='Es tu culpa'>
 	  <aside class='notes'>Aparte de la actitud, no probar diferentes posibilidades en una situación como leer el TFG, tampoco se adaptan los contenidos a nuevas circunstancias: Web, internet de las cosas, microservicios, servicios web, arquitecturas REST... Se sigue con arquitecturas clásicas, sin cambiar los ocntenidos hasta que no llevan 10 años en el mercado y en algunos casos se han convertido en obsoletos.</aside>
 	</section>
 
-	<section data-background=''>
+	<section
+	  data-background='https://farm3.staticflickr.com/2669/4164118904_7249bd226d_b_d.jpg'
+	  alt='Error de sintaxis'>
 	  <h1>Énfasis en la sintaxis</h1>
 	  <h2 class='fragment'>Nada de código ajeno</h2>
 	</section>
@@ -442,7 +444,13 @@ alt='Es tu culpa'>
 
 	  <li><a href='https://www.flickr.com/photos/vrogy/429657788/'>Ordenador de cartón de Michael Vroegop</a></li>
 
-	  <li><a href='https://www.flickr.com/photos/krissen/6340984211/'>Pulgar de Kristian Niemi</a></li>
+	  <li><a
+	  href='https://www.flickr.com/photos/krissen/6340984211/'>Pulgar
+	  de Kristian Niemi</a></li>
+	  <li><a
+	    href='https://www.flickr.com/photos/dnkb/4164118904/'>Syntax
+	    error de dnkbdotcom</a></li>
+
 	</ul>
 	
     </div>
