--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,13 @@
 
       <section data-background='https://farm9.staticflickr.com/8052/8397485048_ae7d2b4e14_k_d.jpg' alt='you say what?'>
 	<h1 class='bkg'>Quizás no lo hacemos <em>tan</em> mal</h1>
+
+	<aside class='notes'>Aquí es donde uno tenéis que decir que
+      tengo un alumno que trabaja en Google, o que el paro de la
+      carrera es del 8%, cosas así. Pocos diréis, sin embargo, "Un
+      alumno mío ha fundado una empresa que da trabajo a 100
+      personas". El sector laboral de la informática es un sector
+	  complicado, que también tiene sus problemas.</aside>
       </section>
 
       <section data-background='https://farm7.staticflickr.com/6200/6080736879_4cfa80b26c_b_d.jpg' alt='facepalm'>
@@ -73,6 +80,12 @@
       <section>
 	<img src='img/tasas-abandono-inicial-ingenierias.png'
 	alt='tasas de abandono inicial UGR'>
+
+	<aside class='notes'>Puede que varíe de una universidad a
+	otra, pero son tasas muy altas, sobre todo comparadas con
+	otras ingenierías. Si tantos alumnos abandonan sin lograr
+	aprobar ni un crédito, es que algo falla y falla de forma
+	  general, en el planteamiento de la enseñanza</aside>
 
       </section>
       
@@ -359,6 +372,13 @@ alt='Es tu culpa'>
 
 	<section data-background=''>
 	  <h1>Enseñar ayudando</h1>
+
+	  <aside class='notes'>El papel del profesor tiene que cambiar
+	    de impartidor de conocimientos a canalizador de
+	    aprendizaje. Y eso incluye una enseñanza multicanal, donde
+	    la clase presencial sea sólo una parte, y esa parte no se
+	    imparta de forma unidireccional, sino multicanal: Grupos
+	    de Telegram, Twitter, wikis, material "en abierto"... </aside>
 	</section>
 
 	<section data-background=''>
