Aclarando el tema zapato

--- a/public/index.html
+++ b/public/index.html
@@ -322,14 +322,29 @@ alt='Es tu culpa'>
 
 	  <aside class='notes'>Como a Rachel, que todo el mundo le
 	    decía que tenía que ser un zapato. ¡Y ella quería ser un
-	    bolso!</aside>
+	    bolso!. Estamos obligando a todo el mundo a que sea un
+	    zapato. Y no sólo eso, el zapato de su hermano mayor,
+	    que, por cierto, está ya en GitHub y todo el mundo se
+	    puede bajar. Creo que deberíamos dejar a la gente elegir
+	    si quieren ser zapatos, drones o cantantes de country. Lo
+	    importante, siempre, son las competencias. </aside>
 
 	</section>
 
 	<section data-background='https://farm6.staticflickr.com/5349/7080530893_ccb10741ce_h_d.jpg' alt='Cruce Shibuya'><h1>¿Contenidos transversales?</h1></section>
 	<section data-background='https://farm1.staticflickr.com/179/429657788_3c8e92c1b2_b_d.jpg' alt='ordenador de cartón'>
 	  <h1>Poca adaptabilidad</h1>
-	  <aside class='notes'>Aparte de la actitud, no probar diferentes posibilidades en una situación como leer el TFG, tampoco se adaptan los contenidos a nuevas circunstancias: Web, internet de las cosas, microservicios, servicios web, arquitecturas REST... Se sigue con arquitecturas clásicas, sin cambiar los ocntenidos hasta que no llevan 10 años en el mercado y en algunos casos se han convertido en obsoletos.</aside>
+	  <aside class='notes'>Aparte de la actitud, no probar
+	  diferentes posibilidades en una situación como leer el TFG,
+	  como aquél que llegó con un pendrive en PowerPoint no sé qué
+	  versión sin pensar siquiera si había ordenador o no,
+	  tampoco se adaptan los contenidos a nuevas circunstancias:
+	  Web, internet de las cosas, microservicios, servicios web,
+	    programación reactiva, SPA, aplicaciones <em>serverless</em>
+	  arquitecturas REST... Se sigue con arquitecturas clásicas,
+	  sin cambiar los contenidos hasta que no llevan 10 años en el
+	  mercado y en algunos casos se han convertido en
+	  obsoletos.</aside> 
 	</section>
 
 	<section
@@ -348,6 +363,11 @@ alt='Es tu culpa'>
       <!-- Transición -->
       <section data-background='https://farm5.staticflickr.com/4101/4906280283_e2d2876ddc_b_d.jpg'>
 	<h1 class='bkg'>No se vayan todavía</h1>
+	<aside class='notes'>No todo van a ser problemas. También
+	soluciones. Algunas que ya habréis llevado a cabo
+	muchos. Otras que quizás no. Otras que podréis llevar a cabo
+	con compañeros, en vuestro departamento, en comisiones de
+	  calidad, en comisiones de diseño de nuevas titulaciones</aside>
       </section>
 
       <section id='contenidos_slide'>
