--- a/public/index.html
+++ b/public/index.html
@@ -253,6 +253,13 @@ alt='Es tu culpa'>
 	  <aside class='notes'>Informática es una ingeniería, y como tal es más importante poner en práctica los conceptos que memorizarlos. Se trata de que, basándote en ellos, seas capaz de construir sistemas hechos principalmente con código. Para que un cocepto se aprenda, es esencial ponerlo en práctica de forma inmediata. Se aprende haciendo.</aside>
 	</section>
 
+	<section
+	   data-background='https://farm6.staticflickr.com/5014/5451586074_65603a2ce7_b_d.jpg' alt='diagrama de barras'>
+	  <h1>Falta de analítica</h1>
+	  <aside class='notes'>En cualquier producto de ingeniería hay que optimizar la calidad del proceso y tratar de evitar los fallos en el mismo. Medir las razones por las que se aprueba y se suspende, se asimilan otros contenidos y otros no, se asiste a clase y/o se copia en el examen, es esencial, como lo es saber las actitudes y aptitudes iniciales</aside>
+	  
+	</section>
+
       </section>
 
 
@@ -262,7 +269,7 @@ alt='Es tu culpa'>
 	<section data-background='https://farm6.staticflickr.com/5056/5492944433_65c35a71bd_b_d.jpg'>
 	  <h1 class='bkg'>Enfoque Mochila de Dora</h1>
 
-	  <aside class='notes'>Argumento "esto a mi ha servido una vez
+	  <aside class='notes'>¿Y qué pasa con los contenidos? Argumento "esto a mi ha servido una vez
 	    después de 20 años de acabar la carrera" o "no sé quién que
 	trabaja en una empresa en Mondoñedo dijo que los sistemas
 	    digitales de segundo le resultaron muy útiles". Que,
@@ -351,7 +358,9 @@ alt='Es tu culpa'>
 	  data-background='https://farm3.staticflickr.com/2669/4164118904_7249bd226d_b_d.jpg'
 	  alt='Error de sintaxis'>
 	  <h1>Énfasis en la sintaxis</h1>
-	  <h2 class='fragment'>Nada de código ajeno</h2>
+	  <h2 class='bkg fragment'>Nada de código ajeno</h2>
+
+	  
 	</section>
 
 	<section>
@@ -489,7 +498,8 @@ alt='Es tu culpa'>
 	  de Kristian Niemi</a></li>
 	  <li><a
 	    href='https://www.flickr.com/photos/dnkb/4164118904/'>Syntax
-	    error de dnkbdotcom</a></li>
+	      error de dnkbdotcom</a></li>
+	  <li><a href='https://www.flickr.com/photos/dw2002/5451586074/'>Gráfico a mano de DW 2002</a></li>
 
 	</ul>
 	
