Añade cuchara de palo

--- a/public/index.html
+++ b/public/index.html
@@ -260,6 +260,11 @@ alt='Es tu culpa'>
 	  
 	</section>
 
+	<section data-background='https://farm5.staticflickr.com/4019/4333977144_310566dba4_b_d.jpg' alt='cuchara de palo'>
+	  <h1>El correo electrónico como herramienta de trabajo en grupo</h1>
+	  <aside class='notes'>Para mi, el infierno se debe parecer bastante a la organización de los TFGs. Cada tribunal tiene su forma de enviar la documentación, su formato, y todo por correo elecrónico. Las fechas tienes que buscarlas en un email, compartir información con el tribunal igual... ¿No estamos en el siglo XXI? ¿Seguimos usando una herramienta de los 80? ¿Usarías tus pantalones y chaquetas con hombreras de los 80? Pues eso. Vale, esto no tiene tanto que ver con la enseñanza. Pero es un infierno igual y es el mismo método que se usa para coordinarse los profesores de una asignatura a veces.</aside>
+	</section>
+
       </section>
 
 
@@ -360,7 +365,7 @@ alt='Es tu culpa'>
 	  <h1>Énfasis en la sintaxis</h1>
 	  <h2 class='bkg fragment'>Nada de código ajeno</h2>
 
-	  
+	  <aside class='notes'>Programar es crear programas, no escribir sentencias sintácticamente correctas. Lo más importante d eun lenguaje es el ecosistema, no la sintaxis. Y el mejor código es el que no se tiene que escribir.</aside>
 	</section>
 
 	<section>
@@ -500,7 +505,7 @@ alt='Es tu culpa'>
 	    href='https://www.flickr.com/photos/dnkb/4164118904/'>Syntax
 	      error de dnkbdotcom</a></li>
 	  <li><a href='https://www.flickr.com/photos/dw2002/5451586074/'>Gráfico a mano de DW 2002</a></li>
-
+	  <li><a href='https://www.flickr.com/photos/markdodds/4333977144/'>Cuchara de J Mark Dodds</a></li>
 	</ul>
 	
     </div>
