--- a/public/index.html
+++ b/public/index.html
@@ -295,10 +295,10 @@ alt='Es tu culpa'>
 	    anterior. Como se explica <em>todo</em>, vamos del nivel
 	    más alto hasta el más bajo. He de confesar que no son informático,
 	    sino físico teórico. Y como tal, no me hablaron de relatividad
-	    hasta 4º y de teoría cuántica de campos hasta 5º. Dependiendo
+	    hasta 4º o 5º y de teoría cuántica de campos hasta 5º. Dependiendo
 	    de lo que vayas a hacer con tu vida y tu empleo, puedes ser un
 	    físico perfectamente válido sin necesidad de entender los
-	    diagramas de Feynman. De la misma forma, puedes ser un
+	    diagramas de Feynman (que de hecho, yo por la presente todavía no entiendo). De la misma forma, puedes ser un
 	    excelente ingeniero del software sin tener ni idea de
 	    programación ni de escribir un compilador</aside>
 	</section>
@@ -334,7 +334,7 @@ alt='Es tu culpa'>
 
 	  <aside class='notes'>Como a Rachel, que todo el mundo le
 	    decía que tenía que ser un zapato. ¡Y ella quería ser un
-	    bolso!. Estamos obligando a todo el mundo a que sea un
+	    bolso! Estamos obligando a todo el mundo a que sea un
 	    zapato. Y no sólo eso, el zapato de su hermano mayor,
 	    que, por cierto, está ya en GitHub y todo el mundo se
 	    puede bajar. Creo que deberíamos dejar a la gente elegir
