Mejorando las explicaciones

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 
 	<p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
 	  
-	<aside class='notes'>Agradecimientos diversos, pero por favor apunten tus tablets, portátiles, móviles y lo que haya a esa dirección</aside>
+	<aside class='notes'>Agradecimientos diversos, pero por favor apunten tus tablets, portátiles, móviles y lo que haya a esa dirección (los móviles van regular, pero se ve...)</aside>
       </section>
 
       <section data-background='https://farm9.staticflickr.com/8052/8397485048_ae7d2b4e14_k_d.jpg' alt='you say what?'>
@@ -58,7 +58,7 @@
       carrera es del 8%, cosas así. Pocos diréis, sin embargo, "Un
       alumno mío ha fundado una empresa que da trabajo a 100
       personas". El sector laboral de la informática es un sector
-	  complicado, que también tiene sus problemas.</aside>
+	  complicado, que también tiene sus problemas. Y es cierto que sale mucha gente muy preparada y de todas las universidades, pero...</aside>
       </section>
 
       <section data-background='https://farm7.staticflickr.com/6200/6080736879_4cfa80b26c_b_d.jpg' alt='facepalm'>
@@ -68,13 +68,12 @@
       <section>
 	<div class="poll" data-poll-name="asignatura"></div>
 
-	<aside class='notes'>En unas jornadas de docencia en nuestra
-	  universidad era unánime entre los profesores de primero esa
+	<aside class='notes'>En unas jornadas de docencia en la ETSIIT  era unánime entre los profesores de primero esa
 	  queja. El problema era que también era unánime entre los de
 	  segundo y los de tercero. Si vienen mal preparados a primero, no
 	  es culpa nuestra. Será de la LOMCE, la LOAPA, Bolonia, Wert o
 	  Mourinho. Pero si llegan mal preparados a segundo, puede que sí
-	  sea culpa nuestra.</aside>
+	  sea culpa nuestra. Y no te digo nada si llegan así al TFG. Pero esto es anécdota. Veamos datos.</aside>
       </section>
 
       <section>
@@ -85,7 +84,7 @@
 	otra, pero son tasas muy altas, sobre todo comparadas con
 	otras ingenierías. Si tantos alumnos abandonan sin lograr
 	aprobar ni un crédito, es que algo falla y falla de forma
-	  general, en el planteamiento de la enseñanza</aside>
+	  general, en el planteamiento de la enseñanza universitaria de la informática.</aside>
 
       </section>
       
@@ -107,13 +106,39 @@
 
 	<section data-background='img/error.jpg' alt='mensaje de error'>
 	  <h1>Problemas con los mensajes de error</h1>
-	  <aside class='notes'>No sólo no se saben interpretar los mensajes de error. Es que ni siquiera saben usarse. En vez de capturar una pantalla o copiar/pegar el error (en StackOverflow o en Google), se hacen fotos del móvil de la misma. Es falta de una panoplia de herramientas básicas <em>horizontales</em> que no corresponden a ninguna asignatura, pero que deberían ser obligatorio desde primero. En parte es culpa del alumno por su actitud. Vale. Pero en la enseñanza hay dos partes. Y si tratas de enfocar prácticas, ejercicios y demás de forma que esa posibilidad de que haya error se minimice para que el alumno no se líe, también le quitas al alumno la posibilidad de aprender corrigiendo sus propios errores.</aside>
+	  <aside class='notes'>No sólo no se saben interpretar los
+	  mensajes de error. Es que ni siquiera saben usarse. En vez
+	  de capturar una pantalla o copiar/pegar el error (en
+	  StackOverflow o en Google), se hacen fotos del móvil de la
+	  misma. Es falta de una panoplia de herramientas
+	  básicas <em>horizontales</em> que no corresponden a ninguna
+	  asignatura, pero que deberían ser obligatorio desde
+	  primero. En parte es culpa del alumno por su
+	  actitud. Vale. Pero en la enseñanza hay dos partes. Y si
+	  tratas de enfocar prácticas, ejercicios y demás de forma que
+	  esa posibilidad de que haya error se minimice para que el
+	  alumno no se líe, también le quitas al alumno la posibilidad
+	  de aprender corrigiendo sus propios errores. Y este puede
+	  resultar raro como primer problema y anecdótico, pero es
+	  que aprender a partir de interpretar mensajes de error es
+	  esencial. </aside>
 	</section>
 
 	<section data-background='https://farm5.staticflickr.com/4067/4478655355_aec3bae1cb_b_d.jpg' alt='rompiendo un ordenador'>
 	  <h1>Poca flexibilidad con nuevas herramientas</h1>
 
-	  <aside class='notes'>Si se les enseña una herramienta, sólo una, sin darle la posibilidad de probar otras y elegir la propia, finalmente sólo saben usar esa herramienta, y a veces ni siquiera bien. Hay que combinar la flexibilidad con la habilidad con una herramienta, y a pesar de que hacen falta 10000 horas para dominar una herramienta, también hacen falta para la ciencia de elegir tus propias herramientas. Si no se saca al alumno de sota, caballo y rey, es todo lo que van a usar.</aside>
+	  <aside class='notes'>Si se les enseña una herramienta, sólo
+	  una, sin darle la posibilidad de probar otras y elegir la
+	  propia, finalmente sólo saben usar esa herramienta, y a
+	  veces ni siquiera bien. Hay que combinar la flexibilidad con
+	  la habilidad con una herramienta, y a pesar de que hacen
+	  falta 10000 horas para dominar una herramienta, también
+	  hacen falta para la ciencia de elegir tus propias
+	  herramientas. Si no se saca al alumno de sota, caballo y
+	  rey, es todo lo que van a usar. El medio es el mensaje, y
+	  si les enseñas una sola herramienta también estás
+	  enseñándoles que los consideras incapaces de elegir una
+	  herramienta. </aside>
 	</section>
 
 	<section data-background='https://farm3.staticflickr.com/2032/2278772565_afca006b1b_o_d.jpg' alt='pizarra'>
@@ -127,7 +152,9 @@
 	  conocimiento del "mundo real": no saben cómo poner precio a
 	  sus servicios, cómo trabajar en equipo para resolver un
 	  problema, cómo hacer cosas fuera de los confines de una
-	    asignatura o un curso</aside>
+	    asignatura o un curso, cómo integrarse a un proyecto en
+	  marcha o cómo decidir el cinturón de herramientas que se va
+	  a usar en un entorno de desarrollo. </aside>
 	</section>
 
 	<section data-background='https://farm4.staticflickr.com/3597/3469696707_c188941c4c_b_d.jpg' alt='página en blanco'>
