Más mejora en explicaciones2

--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,18 @@
 	<section data-background='https://farm4.staticflickr.com/3597/3469696707_c188941c4c_b_d.jpg' alt='página en blanco'>
 	  <h1>Falta de iniciativa para diseñar un proyecto</h1>
 
-	  <aside class='notes'>Como en cualquier otra cosa, cuando un alumno llega al proyecto fin de carrera ha tenido poco margen para decidir el tema de un proyecto y tomar decisiones con respecto al mismo. Cuando se le dice de crear un proyecto, dicen "Voy a crear un proyecto con Mysql, Django y Bootstrap". ¿De qué? Pues una página web con MySQL, Django y Bootstrap. No saben identificar problemas, no saben trabajar de forma creativa para resolverlo. En el reto de la ETSIIT, en el que estoy de jurado, se les pidió que diseñaran un probador virtual. ¿Qué diseñó uno de los equipos? Correcto, una página web con MySQL, Django y Bootstrap</aside>
+	  <aside class='notes'>Como en cualquier otra cosa, cuando un
+	  alumno llega al proyecto fin de carrera ha tenido poco
+	  margen para decidir el tema de un proyecto y tomar
+	  decisiones con respecto al mismo. Cuando se le dice de crear
+	  un proyecto, dicen "Voy a crear un proyecto con Mysql,
+	  Django y Bootstrap". ¿De qué? Pues una página web con MySQL,
+	  Django y Bootstrap. No saben identificar problemas, no saben
+	  trabajar de forma creativa para resolverlo. En el reto de la
+	  ETSIIT, en el que estoy de jurado, se les pidió que
+	  diseñaran un probador virtual. ¿Qué diseñó uno de los
+	  equipos? Correcto, una página web con MySQL, Django y
+	  Bootstrap</aside> 
 	</section>
 	
 	<section id='asignatura_slide'>
@@ -179,7 +190,15 @@
 	ambiente de competencia creciente: Coursera, Khan Academy, y,
 	quizás, <a
 	href='http://www.lavanguardia.com/tecnologia/20160703/402899689142/universidad-facebook-no-ensenan-trabajo.html'>la
-	    Universidad Facebook</a></aside>
+	    Universidad Facebook</a>. Puedes decir que no hace falta
+	preparar directamente para el mercado de trabajo, pero a la
+	vez no puedes usar el argumento de que se usa no sé qué
+	software privativo porque es el que se usa en el mercado de
+	trabajo. Y lo cierto es que cuando se eligió esa herramienta
+	o lenguaje o lo que sea, es porque se usó en algún
+	momento. Lo que no puedes hacer es preparar para el mercado
+	de trabajo de hace 10 años, porque en Informática se cambia
+	de paradigma cada dos años. </aside>
 
 	</section>
 
@@ -190,12 +209,19 @@
 	  data-background='https://farm3.staticflickr.com/2145/1507555279_2e20dbf432_b_d.jpg'
 alt='Es tu culpa'>
 	  <h1 class='bkg'>Es culpa nuestra</h1>
+
+	  <aside class='notes'>Colectivamente, no queda otro
+	  remedio. Nosotros diseñamos las titulaciones, hacemos la
+	    guías de estudio y participamos en las comisiones de calidad.</aside>
 	</section>
 
 	<section
 	  data-background='https://farm3.staticflickr.com/2865/9518221385_1f99d6c41f_h_d.jpg'
 	  alt='tú, campeón'>
 	  <h1 class='bkg'>¿Es culpa nuestra?</h1>
+	  <aside class='notes'>Pero cada palo que aguante su
+	  vela. Habrá cosas de las que tengamos la culpa personalmente
+	    y otras de las que no. Pero, por ejemplo, el tema del TFG...</aside>
 	</section>
 
 	<section id='TFG_slide'>
